airstrikeBravoPortrait / Fix width / to fix currency packs "too narrow" issue.

--- a/templates/airstrikeBravoPortrait/less/airstrikeBravoPortrait.less
+++ b/templates/airstrikeBravoPortrait/less/airstrikeBravoPortrait.less
@@ -13,7 +13,7 @@
 @internalWidth:     490px;
 @internalHeight:    550px;
 @headerHeight:      200px;
-
+@padding:           10px;
 
 // IPHONE HACKS
 // --------------------------------------------------
@@ -72,7 +72,6 @@ ul {
 }
 
 .header {
-    @padding: 10px;
     @topBarHeight: 60px;
     width: @internalWidth;
     height: @headerHeight - (2 * @padding);
@@ -226,6 +225,7 @@ ul {
     margin: 10px;
     overflow: auto;
     min-height: @internalHeight;
+    width: @internalWidth - (2 * @padding);
     
     &.menu{
         float: none;
@@ -300,7 +300,7 @@ ul {
     @collapsedHeight: 100px;
     height: @collapsedHeight;
     overflow: hidden;
-    .background-size(cover);
+    .background-size(100% 100%);
     .transition(height 0.2s ease-out);
 
     &.expanded {
